--- a/source/_posts/2018-04-21.md
+++ b/source/_posts/2018-04-21.md
@@ -2,18 +2,20 @@
 title: JS作用域
 date: 2018-04-21 16:38:28
 categories:
-- js
+  - js
 tags:
-- 作用域
+  - 作用域
 ---
 
-## 作用域
+##### 作用域
+
 1. 全局作用域：函数外部的作用域
 2. 局部作用域：函数内部的作用域
 
 <!-- more -->
 
-## 全局作用域
+##### 全局作用域
+
 ```
 var outer = 'outer';
 function fn(){
@@ -21,7 +23,9 @@ function fn(){
 }
 fn(); //outer
 ```
-## 局部作用域
+
+##### 局部作用域
+
 ```
 function fn(){
     var inner= 'inner';
@@ -29,23 +33,27 @@ function fn(){
 fn();
 console.log(inner); //undefined
 ```
-## 变量提前声明
+
+##### 变量提前声明
+
 ```
 var global = 'global';
 function fn(){
     console.log(global); //undefined
-    var global = 'newGlobal';             
+    var global = 'newGlobal';
     console.log(global); //newGlobal
 }
 console.log(global); //global
 ```
+
 相当于:
+
 ```
 var global = 'global';
 function fn(){
     var global; //提前声明了局部变量；
     console.log(global); //undefined
-    var global = 'newGlobal';             
+    var global = 'newGlobal';
     console.log(global); //newGlobal
 }
 console.log(global); //global
