--- a/source/_posts/2020-04-04.md
+++ b/source/_posts/2020-04-04.md
@@ -26,8 +26,8 @@ chrome 浏览器保留了 3 位小数再减了 0.1(最后宽度是 380.656px);
 这样每一块的宽度加起来没有超出总宽度,一行显示正常。
 IE 浏览器保留了 2 位小数，最后一位小数四舍五入了(380.67px),3 块加起来超出总宽度，导致一行排不下。
 
-//chrome 浏览器
-QQ 截图 20201102105048.png
+- chrome 浏览器
+  ![image](https://img9.doubanio.com/view/photo/l/public/p2628416405.webp)
 
-//IE 浏览器
-QQ 截图 20201102105033.png
+- IE 浏览器
+  ![image](https://img9.doubanio.com/view/photo/l/public/p2628416406.webp)
