--- a/source/_posts/2018-05-02.md
+++ b/source/_posts/2018-05-02.md
@@ -43,3 +43,28 @@ tags:
    sessionStorage 不在不同的浏览器窗口中共享
    即使是同一个页面 localstorage 在所有同源窗口中都是共享的
    cookie 也是在所有同源窗口中都是共享的
+
+##### 使用
+
+1. Cookie
+
+```
+document.cookie = name+'='+value[;expires=date][;path=路径][;domain=域名]
+```
+
+2. localStorage(永久的)sessionStorage(临时的)
+
+```
+setItem(key,val) //设置
+getItem(key) //获取
+removeItem(key) //删除
+
+//sessionStorage
+sessionStorage.setItem(key,val)
+sessionStorage.getItem(key)
+
+//localStorage
+localStorage.setItem(key,val)
+localStorage.getItem(key)
+localStorage.removeItem(key)
+```
