--- a/source/_posts/2020-11-24.md
+++ b/source/_posts/2020-11-24.md
@@ -11,7 +11,9 @@ tags:
 
 <!-- more -->
 
-##### 父组件
+#### 方法 1
+
+**父组件**
 
 ```
 <div>
@@ -29,7 +31,7 @@ setup(){
 }
 ```
 
-##### 子组件
+**子组件**
 
 ```
 <template>
@@ -49,6 +51,36 @@ export default {
       toLogin
     };
   }
+};
+</script>
+```
+
+#### 方法 2
+
+**父组件**
+
+```js
+<div>
+  <register @changeDisplayValue="changeDisplayValue"></register>
+</div>
+```
+
+**子组件**
+
+```js
+import { getcurrentInstance} from vue;
+<script>
+export default {
+  setup(props, context) {
+  const internalInstance = getCurrentInstance();
+  let toLogin = () => {
+    internalInstance.emit("changeDisplayValue", "login");
+    // 可用json对象的方式，传多个参数
+    //internalInstance.emit("changeDisplayValue", {a:'1',b:'2'});
+  };
+  return {
+    toLogin
+  };
 };
 </script>
 ```
