--- a/source/_posts/2021-02-01.md
+++ b/source/_posts/2021-02-01.md
@@ -93,7 +93,7 @@ onChange(file, filelist) {
       this.$message.warning('文件类型不正确！');
     }
   };
-  //注意这里，有点blog不一样，根据情况可修改
+  //注意这里，有些blog写的不一样，根据情况可修改
   fileReader.readAsBinaryString(file.raw);
 },
 ```
